--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,5 @@
-beautifulsoup4==4.9.3
-requests==2.25.1
+beautifulsoup4==4.12.3
 openai==1.58.1
-paho_mqtt=2.1.0
-toml=0.10.2
-requests-oauthlib==1.0.0
-responses==0.12.1
-roman==2.0.0
-RPi.GPIO==0.7.0
-RTIMULib==7.2.1
-scrollphat==0.0.7
-scrollphathd==1.2.1
-Send2Trash==1.6.0b1
-sense-hat==2.6.0
-simplejpeg==1.6.4
-simplejson==3.17.2
-six==1.16.0
-skywriter==0.0.7
-sn3218==1.2.7
-soupsieve==2.2.1
-spidev==3.5
-ssh-import-id==5.10
-texttable==1.6.3
-thonny==4.0.1
-toml==0.10.1
-touchphat==0.0.1
-twython==3.8.2
-typed-ast==1.4.2
-typing-extensions==3.7.4.3
-unicornhathd==0.0.4
-urllib3==1.26.5
-v4l2-python3==0.3.2
-webencodings==0.5.1
-websocket-client==0.57.0
-Werkzeug==1.0.1
-wrapt==1.12.1
-zipp==1.0.0
+paho_mqtt==2.1.0
+Requests==2.32.3
+toml==0.10.2
